--- a/gerenciador_tarefas/src/main/resources/templates/index.html
+++ b/gerenciador_tarefas/src/main/resources/templates/index.html
@@ -1,33 +1,65 @@
 <!DOCTYPE html>
-<html lang="pt-br">
 <html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerenciador de Tarefas</title>
+    <link rel="stylesheet" href="/css/styles.css"> <!-- Referência para o arquivo de estilo -->
 </head>
 <body>
-<h1>Lista de Tarefas</h1>
+<header>
+    <h1>Gerenciador de Tarefas</h1>
+    <a class="btn" href="/tasks/new">Criar Nova Tarefa</a>
+</header>
 
-<a href="/tasks/new">Criar Nova Tarefa</a>
+<!--<main>-->
+    <div class="kanban-container">
+        <div class="kanban-column">
+            <h4>A Fazer</h4>
+            <ul>
+                <li th:each="task : ${todoTasks}" class="task-card">
+                    <span th:text="${task.description}"></span>
+                    <div class="task-header">
+                        <strong th:text="${task.title}"></strong>
+                        <div class="btn-container">
+                            <a class="btn btn-action" th:href="@{/tasks/updateStatus/{id}/IN_PROGRESS(id=${task.id})}"> >> </a>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
 
-<table>
-    <thead>
-    <tr>
-        <th>ID</th>
-        <th>Descrição</th>
-        <th>Ações</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="task : ${tasks}">
-        <td th:text="${task.id}"></td>
-        <td th:text="${task.description}"></td>
-        <td>
-            <a th:href="@{/tasks/delete/{id}(id=${task.id})}">Deletar</a>
-        </td>
-    </tr>
-    </tbody>
-</table>
+        <div class="kanban-column">
+            <h4>Em Progresso</h4>
+            <ul>
+                <li th:each="task : ${inProgressTasks}" class="task-card">
+                    <span th:text="${task.description}"></span>
+                    <div class="task-header">
+                        <strong th:text="${task.title}"></strong>
+                        <div class="btn-container">
+                            <a class="btn btn-action" th:href="@{/tasks/updateStatus/{id}/DONE(id=${task.id})}"> >> </a>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+
+        <div class="kanban-column">
+            <h4>Finalizado</h4>
+            <ul>
+                <li th:each="task : ${doneTasks}" class="task-card">
+                    <span th:text="${task.description}"></span>
+                    <div class="task-header">
+                        <strong th:text="${task.title}"></strong>
+                        <div class="btn-container">
+                            <a class="btn btn-delete" th:href="@{/tasks/delete/{id}(id=${task.id})}">X</a>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </div>
+<!--</main>-->
 </body>
 </html>
+
