--- a/gerenciador_tarefas/src/main/resources/templates/task-form.html
+++ b/gerenciador_tarefas/src/main/resources/templates/task-form.html
@@ -1,20 +1,30 @@
 <!DOCTYPE html>
-<html lang="pt-br">
 <html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Criar Nova Tarefa</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-<h1>Criar Nova Tarefa</h1>
+<header>
+    <h1>Gerenciador de Tarefas</h1>
+</header>
 
-<form action="/tasks/save" method="post">
-    <label for="description">Descrição:</label>
-    <input type="text" id="description" name="description" th:value="${task.description}" required />
-    <button type="submit">Salvar Tarefa</button>
-</form>
+<div class="task-form-container">
+    <h1>Criar Nova Tarefa</h1>
 
-<a href="/tasks">Voltar para Lista de Tarefas</a>
+    <form action="/tasks/save" method="post">
+        <label for="title">Título:</label>
+        <input type="text" id="title" name="title" th:value="${task.title}" required />
+
+        <label for="description">Descrição:</label>
+        <input type="text" id="description" name="description" th:value="${task.description}" required />
+
+        <button type="submit">Salvar Tarefa</button>
+    </form>
+
+    <a href="/tasks">Voltar para Lista de Tarefas</a>
+</div>
 </body>
 </html>
